# math_problems

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
include/: almat.h  alvec.h  graphics.h
src/domains/linear_algebra/: almat.cpp  almat.h  alvec.cpp  alvec.h
src/experiments/: vector_test.cpp
src/generic_defs/: vector.cpp  vector.h
src/utils/: graphics.cpp
